assets/css/main.css
/* ... */
		h1 strong {
			font-weight: 700;
		}

	h2 {
		font-size: 2em;
		letter-spacing: -0.015em;
	}

	h3 {
		font-size: 1.5em;
		letter-spacing: -0.015em;
	}

	em, i {
		font-style: italic;
	}

	br.clear {
		clear: both;
	}

	hr {
		border: 0;
		border-top: solid 1px #444;
		border-top-color: rgba(0, 0, 0, 0.35);
		box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.1);
		height: 1px;
		margin: 3em 0;
	}

	p, ul, ol, dl, table {
		margin-bottom: 2em;
	}

	header {
		margin: 0 0 0 0;
	}

		header > p {
			font-size: 1.25em;
			margin: 0;
		}

	footer {
		margin: 3em 0 0 0;
	}

		footer > p {
			font-size: 1.25em;
		}

/* Container */

    .embed-youtube {
        position: relative;
        padding-bottom: 56.25%; /* - 16:9 aspect ratio (most common) */
        /* padding-bottom: 62.5%; - 16:10 aspect ratio */
        /* padding-bottom: 75%; - 4:3 aspect ratio */
        padding-top: 30px;
        height: 0;
        overflow: hidden;
    }

    .embed-youtube iframe,
    .embed-youtube object,
    .embed-youtube embed {
        border: 0;
        position: absolute;
        transform: translate(-50%, -50%); /* This is a shorthand of
                                                 translateX(-50%) and translateY(-50%) */
        top: 40%;  /* position the top  edge of the element at the middle of the parent */
        left: 50%;
        width: 80%;
        height: 80%;
    }

	.container {
		margin: 0 auto;
		max-width: calc(100% - 50px);
		width: 1200px;
	}

		.container.medium {
			width: 900px;
		}

		@media screen and (max-width: 1680px) {

			.container {
				width: 1200px;
			}

				.container.medium {
					width: 900px;
				}

		}

		@media screen and (max-width: 1280px) {

			.container {
				width: 960px;
			}

				.container.medium {
					width: 720px;
				}

		}

		@media screen and (max-width: 980px) {

			.container {
				width: 100%;
			}

				.container.medium {
					width: 75%;
				}

		}

		@media screen and (max-width: 736px) {

			.container {
				width: 100%;
				max-width: calc(100% - 30px);
			}

				.container.medium {
					width: 100%;
				}

		}

/* Row */

	.row {
		display: flex;
		flex-wrap: wrap;
		box-sizing: border-box;
		align-items: stretch;
	}

		.row > * {
			box-sizing: border-box;
		}

		.row.gtr-uniform > * > :last-child {
			margin-bottom: 0;
		}

		.row.aln-left {
			justify-content: flex-start;
		}

		.row.aln-center {
			justify-content: center;
		}

		.row.aln-right {
			justify-content: flex-end;
		}

		.row.aln-top {
			align-items: flex-start;
		}

		.row.aln-middle {
			align-items: center;
		}

		.row.aln-bottom {
			align-items: flex-end;
		}

		.row > .imp {
			order: -1;
		}

		.row > .col-1 {
			width: 8.33333%;
		}

		.row > .off-1 {
			margin-left: 8.33333%;
		}

		.row > .col-2 {
			width: 16.66667%;
		}

		.row > .off-2 {
			margin-left: 16.66667%;
		}

		.row > .col-3 {
			width: 25%;
		}

		.row > .off-3 {
			margin-left: 25%;
		}

		.row > .col-4 {
			width: 33.33333%;
		}

		.row > .off-4 {
			margin-left: 33.33333%;
		}

		.row > .col-5 {
			width: 41.66667%;
		}

		.row > .off-5 {
			margin-left: 41.66667%;
		}

		.row > .col-6 {
			width: 50%;
		}

		.row > .off-6 {
			margin-left: 50%;
		}

		.row > .col-7 {
			width: 58.33333%;
		}

		.row > .off-7 {
			margin-left: 58.33333%;
		}

		.row > .col-8 {
			width: 66.66667%;
		}

		.row > .off-8 {
			margin-left: 66.66667%;
		}

		.row > .col-9 {
			width: 75%;
		}

		.row > .off-9 {
			margin-left: 75%;
		}

		.row > .col-10 {
			width: 83.33333%;
		}

		.row > .off-10 {
			margin-left: 83.33333%;
		}

		.row > .col-11 {
			width: 91.66667%;
		}

		.row > .off-11 {
			margin-left: 91.66667%;
		}

		.row > .col-12 {
			width: 100%;
		}

		.row > .off-12 {
			margin-left: 100%;
		}

		.row.gtr-0 {
			margin-top: 0px;
			margin-left: 0px;
		}

			.row.gtr-0 > * {
				padding: 0px 0 0 0px;
			}

			.row.gtr-0.gtr-uniform {
				margin-top: 0px;
			}

				.row.gtr-0.gtr-uniform > * {
					padding-top: 0px;
				}

		.row.gtr-25 {
			margin-top: -6.25px;
			margin-left: -6.25px;
		}

			.row.gtr-25 > * {
				padding: 6.25px 0 0 6.25px;
			}

			.row.gtr-25.gtr-uniform {
				margin-top: -6.25px;
			}

				.row.gtr-25.gtr-uniform > * {
					padding-top: 6.25px;
				}

		.row.gtr-50 {
			margin-top: -12.5px;
			margin-left: -12.5px;
		}

			.row.gtr-50 > * {
				padding: 12.5px 0 0 12.5px;
			}

			.row.gtr-50.gtr-uniform {
				margin-top: -12.5px;
			}

				.row.gtr-50.gtr-uniform > * {
					padding-top: 12.5px;
				}

		.row {
			margin-top: -25px;
			margin-left: -25px;
		}

			.row > * {
				padding: 25px 0 0 25px;
			}

			.row.gtr-uniform {
				margin-top: -25px;
			}

				.row.gtr-uniform > * {
					padding-top: 25px;
				}

		.row.gtr-150 {
			margin-top: -37.5px;
			margin-left: -37.5px;
		}

			.row.gtr-150 > * {
				padding: 37.5px 0 0 37.5px;
			}

			.row.gtr-150.gtr-uniform {
				margin-top: -37.5px;
			}

				.row.gtr-150.gtr-uniform > * {
					padding-top: 37.5px;
				}

		.row.gtr-200 {
			margin-top: -50px;
			margin-left: -50px;
		}

			.row.gtr-200 > * {
				padding: 50px 0 0 50px;
			}

			.row.gtr-200.gtr-uniform {
				margin-top: -50px;
			}

				.row.gtr-200.gtr-uniform > * {
					padding-top: 50px;
				}
/* ... */

